Style bootstrap carousel and fix nav button not working when collapsed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,8 +124,30 @@ body {
     color: #fff;
 }
 
+.recent-posts-carousel {
+    background-color: #00695c;
+    background: linear-gradient(180deg, rgba(0,105,92,1) 0%, rgba(0,77,64,1) 100%);
+}
+
+.carousel-item {
+    height: 25vh;
+}
+
+.carousel-item .card-img-top {
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 5px;
+}
+
+.carousel-caption i {
+    font-size: 3em;
+    animation: MoveUpDown 2s ease-in-out infinite;
+}
+
 .recent-posts .card {
     background-color: #F9FAFC;
+    margin-top: 5px;
 }
 
 /* Blog/Post Detail */
@@ -273,6 +295,19 @@ body {
 
 .main-bg {
     background-color: #F9FAFC;
+}
+
+/* Animations */
+
+@keyframes MoveUpDown {
+    0% {
+        transform: translateY(0);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(10px);
+        opacity: 1;
+    }
 }
 
 /* Media Queries */
